Use the ID attribute (and not NAME) for FRAME/IFRAME/OBJECT in XHTML. b=183683 r+sr=bzbarsky